Update index.html v2

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>StreamLine</title>
 </head>
-<body>
-    <h1>Welcome to StreamLine - v1</h1>
-    <p>Your server is running successfully.</p>
+<body style="background-color: lightblue;">
+    <h1>Welcome to StreamLine - v2 [New Feature]</h1>
+    <p>This is the updated version with new UI.</p>
 </body>
 </html>
